Removing unused font from base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     {% endcompress %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:500|Khula:400|Oxygen" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:500|Khula:400" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/csdt.css' %}" >
 
 
@@ -106,4 +106,3 @@
     {% analytical_body_bottom %}
   </body>
 </html>
-
